--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -23,9 +23,33 @@ h2 {
   letter-spacing: 2px;
 }
 
+html, body {
+  background-color: #202028;
+}  
+
 a {
+  color: #00CFDE !important;
   text-decoration: none !important;
 }
+
+.navbar-brand {
+  color: white !important;
+  font-weight: 700; 
+}
+
+.jumbotron {
+  background-color: #2b2b32;
+}
+
+// .challenge-button {
+//   background-color: #2b2b32 !important;
+//   backdrop-filter: blur(80px) !important;
+//   border: 1px solid transparent !important;
+// }
+
+// .challenge-button:hover {
+//   border: 1px soild #00CFDE !important;
+// }
 
 blockquote {
   border-left: 4px solid $secondary;
